# PyAudiobookBinder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/pyaudiobookbinder/: __init__.py  pyaudiobookbinder.py
