[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name="pyaudiobookbinder"
version="0.1.0"
authors =[{name="Daniel Byrne",email="realdanielbyrne@icloud.com"}]
description = "A Python script using ffmeg which simpliies the process of binding multiple audio files togethers into an audiobook by gleaming smart defaults from the audio files's metadata, locations, durations, and names."
readme = "README.md"
requires-python=">=3.9.0"
classifiers=[
    "Intended Audience :: Science/Research",
    "Intended Audience :: Authors",
    "Intended Audience :: Developers",
    "Intended Audience :: Audiobook Developers",
    "Programming Language :: Python",
    "Topic :: Audiobook Development",
    "Topic :: Authorship",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",    
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "argparse",
  "ipykernel",
  "ipython",
]
dynamic = ["readme"]

[project.urls]
"Homepage"="https://github.com/realdanielbyrne/pyaudiobookbinder"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

